ensured that the icon have equal spacing in all sides

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -40,10 +40,13 @@ body {
 .top {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .content {
   flex-direction: column;
+  margin: 16px 0px;
 }
 
 .close-button {
